--- a/src/client/views/components/Layout.scss
+++ b/src/client/views/components/Layout.scss
@@ -6,6 +6,8 @@
   position:absolute;
   width:100%;
   height:100%;
+  min-width:0;
+  min-height:0;
   display: flex;
   flex-direction: column;
   top:0;
@@ -24,8 +26,8 @@
   float:left;
   width:50%;
   height:50%;
-  min-width:600px;
-  min-height:600px;
+  min-width:calc(600px);
+  min-height:calc(600px);
 }
 
 .modal {
@@ -139,6 +141,8 @@ table {
   position:relative;
   display: flex;
   flex-direction: row;
+  min-width:0;
+  min-height:0;
 }
 
 .plot_area {
